# stock-checker

./: Cargo.toml  README.md
src/: main.rs
