[package]
name = "vol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
num-format = "0.4.4"
statrs = "0.18.0"
tabled = { version = "0.20.0" }
reqwest = { version = "0.12.25", default-features = false, features = ["native-tls"] }
yfinance-rs = "0.7.2"
tokio = { version = "1", features = ["full"] }
rust_decimal = "1.39.0"
